// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribute-based modifier 1`] = `
"() => create(Foo, {
  \\"className\\": \\"Foo_6rq\\"
});

CSS.put(\`
	.Foo_6rq { color: white; background: red }
\`);"
`;

exports[`Attribute-based modifier 2`] = `
"() => <Foo className=\\"Foo_6rq\\" />;

CSS.put(\`
	.Foo_6rq { color: white; background: red }
\`);"
`;

exports[`Explicitly use modifier 1`] = `
"() => create(Fragment, {}, create(Baz, {
  \\"className\\": \\"Foo_76l Baz_24h\\"
}), create(Foo, {
  \\"className\\": \\"Foo_76l\\"
}));

CSS.put(\`
	.Baz_24h { color: red }
	.Foo_76l { color: blue }
\`);"
`;

exports[`Explicitly use modifier 2`] = `
"() => <Fragment><Baz className=\\"Foo_76l Baz_24h\\" /><Foo className=\\"Foo_76l\\" /></Fragment>;

CSS.put(\`
	.Baz_24h { color: red }
	.Foo_76l { color: blue }
\`);"
`;

exports[`Nested modifier 1`] = `
"() => create(Fragment, {}, create(Foo, {
  \\"className\\": \\"Foo_76l\\"
}), create(Bar, {}, create(Foo, {
  \\"className\\": \\"Foo_76l Foo_61e\\"
})));

CSS.put(\`
	.Foo_61e { color: blue }
	.Foo_76l { color: red }
\`);"
`;

exports[`Nested modifier 2`] = `
"() => <Fragment><Foo className=\\"Foo_76l\\" /><Bar><Foo className=\\"Foo_76l Foo_61e\\" /></Bar></Fragment>;

CSS.put(\`
	.Foo_61e { color: blue }
	.Foo_76l { color: red }
\`);"
`;

exports[`Simple modifier 1`] = `
"() => create(Foo, {
  \\"className\\": \\"Foo_6rq\\"
});

CSS.put(\`
	.Foo_6rq { color: red }
\`);"
`;

exports[`Simple modifier 2`] = `
"() => <Foo className=\\"Foo_6rq\\" />;

CSS.put(\`
	.Foo_6rq { color: red }
\`);"
`;

exports[`collapse single-use modifiers 1`] = `
"() => create(Foo, {}, create(Bar, {
  \\"className\\": \\"Bar_24g\\"
}));

CSS.put(\`
	.Bar_24g { color: red; border: red solid 1px; background: white }
\`);"
`;

exports[`collapse single-use modifiers 2`] = `
"() => <Foo><Bar className=\\"Bar_24g\\" /></Foo>;

CSS.put(\`
	.Bar_24g { color: red; border: red solid 1px; background: white }
\`);"
`;
